# battery_discharge

./: CMakeLists.txt  main.cpp
ElectronicLoad/: CMakeLists.txt  communication_rs232.cpp  communication_rs232.h  electronic_load.cpp  electronic_load.h  electronic_load_tests.cpp  electronic_load_tests.h
RS-232/: CMakeLists.txt
